<resources>
    <string name="app_name">GoingOnApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="post_news">Post</string>
    <string name="post_news_title">Title...</string>
    <string name="post_news_content">Content...</string>
    <string name="take_photo">take_photo</string>
    <string name="hint_nickname">Nickname ...</string>
    <string name="hint_password">Password ...</string>
    <string name="hint_city">City ...</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string-array name="navigation_drawer_options">
        <item>Register</item>
        <item>Log in</item>
        <item>Log out</item>
        <item>Hot news</item>
        <item>All news</item>
    </string-array>
    <array name="navigation_drawer_icons">
        <item>@drawable/ic_action_user_add</item>
        <item>@drawable/ic_action_user</item>
        <item>@drawable/ic_action_user</item>
        <item>@drawable/ic_action_star</item>
        <item>@drawable/ic_action_select_all</item>
    </array>
</resources>
