<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/post_news_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/post_news"/>
    <EditText
        android:id="@+id/post_news_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:hint="@string/post_news_title"
        android:imeOptions="actionNext"
        android:singleLine="true"/>
    <EditText
        android:id="@+id/post_news_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:hint="@string/post_news_content"
        android:imeOptions="actionNext"
        android:layout_below="@id/post_news_title"/>
    <ImageView
        android:id="@+id/post_news_photo"
        android:src="@drawable/no_image_available"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/post_news_content"
        android:layout_above="@id/post_news_button"/>
</RelativeLayout>