<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/myBlue">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/no_image_available"
        android:id="@+id/log_in_logo"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/log_in_username"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="80dp"
        android:layout_below="@id/log_in_logo"
        android:hint="@string/hint_nickname"
        android:imeOptions="actionNext"
        android:singleLine="true"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/log_in_password"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/log_in_username"
        android:hint="@string/hint_password"
        android:password="true"
        android:singleLine="true"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/log_in_button"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/log_in_password"
        android:layout_marginTop="70dp"
        android:text="@string/log_in"/>
</RelativeLayout>